--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -276,9 +276,59 @@
     "@landingpage_validate_LandingPageText": {
         "description": "Validation message for Landing Page Text"
     },
+    "landingpage_validate_impressum": "Please enter impressum",
+    "@landingpage_validate_impressum": {
+        "description": "Validation message for landingpage impressum"
+    },
+    "landingpage_validate_privacy_policy": "Please enter privacy policy",
+    "@landingpage_validate_privacy_policy": {
+        "description": "Validation message for Llandingpage privacy policy"
+    },
+    "landingpage_validate_initial_information": "Please enter initial information",
+    "@landingpage_validate_initial_information": {
+        "description": "Validation message for Llandingpage inital information"
+    },
+    "landingpage_creation_progress_indicator_text": "Step {currentStep} of {elementsTotal}",
+    "@landingpage_creation_progress_indicator_text": {
+        "description": "Text under the Progress Indicator in Landingpage creation form",
+        "placeholders": {
+            "currentStep": {
+                "type": "int",
+                "example": "1"
+            },
+            "elementsTotal": {
+                "type": "int",
+                "example": "2"
+            }
+        }
+    },
+    "landingpage_creation_impressum_placeholder": "Impressum",
+    "@landingpage_creation_impressum_placeholder": {
+        "description": "Placeholder for impressum in landingpage creation form"
+    },
+    "landingpage_creation_privacy_policy_placeholder": "Privacy policy",
+    "@landingpage_creation_privacy_policy_placeholder": {
+        "description": "Placeholder for privacy policy in landingpage creation form"
+    },
+    "landingpage_creation_initial_information_placeholder": "Initial information",
+    "@landingpage_creation_initial_information_placeholder": {
+        "description": "Placeholder for initial information in landingpage creation form"
+    },
+    "landingpage_creation_back_button_text": "Back",
+    "@landingpage_creation_back_button_text": {
+        "description": "Title for Back Button in Landingpage creation form"
+    },
+    "landingpage_creation_edit_button_text": "Edit Landingpage",
+    "@landingpage_creation_edit_button_text": {
+        "description": "Title for Landingpage edit Button in Landingpage creation form"
+    },
     "landingpage_create_txt": "Create Landing Page",
     "@landingpage_create_txt": {
         "description": "Text for Creating Landing Page"
+    },
+    "landingpage_creation_continue": "Continue",
+    "@landingpage_creation_continue": {
+        "description": "Text for continue Button in landingpage creation form"
     },
     "landingpage_create_promotion_template_description": "Below you can create a template that your promoters will use to send recommendations via WhatsApp.\nYou can use the placeholder $name to display the name of the recommendation recipient.",
     "@landingpage_create_promotion_template_description": {
