Review kommentare umgesetzt

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -812,6 +812,22 @@
     "@delete_account_confirmation_alert_cancel_button_title": {
         "description": "Titel für den Abbrechen Button im Bestätigungs Alert auf der Seite zum Account löschen"
     },
+    "recommendation_page_leadTextField_title_prefix": "Text für",
+    "@recommendation_page_leadTextField_title_prefix": {
+        "description": "Prefix für LeadTextField Titel"
+    },
+    "recommendation_page_leadTextField_send_button": "Versenden",
+    "@recommendation_page_leadTextField_send_button": {
+        "description": "Title für den Absende Button"
+    },
+    "recommendation_page_send_whatsapp_error": "WhatsApp ist nicht installiert oder kann nicht geöffnet werden.",
+    "@recommendation_page_send_whatsapp_error": {
+        "description": "Nachricht wenn die Message nicht versendet werden kann"
+    },
+    "recommendation_page_max_item_Message": "Es dürfen maximal 6 Items hinzugefügt werden.",
+    "@recommendation_page_max_item_Message": {
+        "description": "Nachricht wenn mehr als 6 Items hinzugefügt werden"
+    },
     "recommendations_choose_reason_placeholder": "Wähle einen Grund",
     "@recommendations_choose_reason_placeholder": {
         "description": "Platzhalter für das Dropdown Menü der Empfehlungsgründe auf der Empfehlungsseite"
