--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -1230,6 +1230,10 @@
     "@landingpage_pagebuilder_config_menu_contact_form_type": {
         "description": "Kontaktformular Titel im Pagebuilder Config Menü"
     },
+    "landingpage_pagebuilder_config_menu_footer_type": "Footer",
+    "@landingpage_pagebuilder_config_menu_footer_type": {
+        "description": "Footer Titel im Pagebuilder Config Menü"
+    },
     "landingpage_pagebuilder_config_menu_unknown_type": "Unbekannt",
     "@landingpage_pagebuilder_config_menu_unknown_type": {
         "description": "Unbekannt Titel im Pagebuilder Config Menü"
