--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1230,6 +1230,10 @@
     "@landingpage_pagebuilder_config_menu_contact_form_type": {
         "description": "Contact form title in the pagebuilder config menu"
     },
+    "landingpage_pagebuilder_config_menu_footer_type": "Footer",
+    "@landingpage_pagebuilder_config_menu_footer_type": {
+        "description": "Footer title in the pagebuilder config menu"
+    },
     "landingpage_pagebuilder_config_menu_unknown_type": "Unknown",
     "@landingpage_pagebuilder_config_menu_unknown_type": {
         "description": "Unknown title in the pagebuilder config menu"
